# solana

dice_gamble/: Cargo.toml
dice_gamble_client/: casino-keypair.json
dice_gamble_client/src/: main.rs
dice_gamle/: Readme.md
dice_gamle/dice_gamble/src/: lib.rs
dice_gamle/dice_gamble_client/: Cargo.toml
dice_gamle/dice_gamble_client/src/: lib.rs
donation_system/: Readme.md
donation_system/client/: Cargo.toml
donation_system/client/src/: main.rs
donation_system/localnet/: admin.json  admin_wallet.json  clientA.json  clientB.json  program.json
donation_system/program/: Cargo.toml
donation_system/program/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
